# aoc_2021

./: .gitignore
day01/: Dockerfile  Main.hs  Makefile  day01.cabal  hindent-all
day01/app/: main.hs
day01/src/: Day01.hs
day01/test/: Day01.test.hs
day02/: Dockerfile
day02/src/: Aoc.hs
day02/test/: Aoc.test.hs
day03/src/: Aoc.hs
day03/test/: Aoc.test.hs
day04/: aoc.cabal
day04/data/: testinput3.txt
day04/src/: Aoc.hs
day04/test/: Aoc.test.hs
day05/: Main.hs
day05/src/: Aoc.hs
day05/test/: Aoc.test.hs
day06/: aoc.cabal
day06/src/: Aoc.hs
day06/test/: Aoc.test.hs
day07/: Dockerfile
day07/src/: Aoc.hs
day07/test/: Aoc.test.hs
day08/: aoc.cabal
day08/src/: Aoc.hs
day08/test/: Aoc.test.hs
day09/src/: Aoc.hs
day09/test/: Aoc.test.hs
day10/src/: Aoc.hs
day10/test/: Aoc.test.hs
day11/: aoc.cabal  index.js
day11/src/: Aoc.hs
day11/test/: Aoc.test.hs
day13/: aoc.cabal
day13/src/: Aoc.hs
day14/: aoc.cabal
day14/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day14/dist-newstyle/packagedb/ghc-8.10.7/: package.cache
day14/src/: Aoc.hs
day14/test/: Aoc.test.hs
day15/: aoc.cabal
day15/src/: Aoc.hs
day15/test/: Aoc.test.hs
test-assignment/: day01.cabal
test-assignment/src/: Day01.hs
test-assignment/test/: Day01.test.hs
