cabal-version:      2.4
name:               day01
version:            0.1.0.0

author:             Emil Bergström
maintainer:         emil.bergstrom@cygni.se

extra-source-files:
    CHANGELOG.md
    README.md

Library
    Exposed-Modules:  Day01
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    
        base ^>=4.14.3.0, 
        mr-env,
        split

executable main
    main-is: Main.hs
    build-depends:    
        base ^>=4.14.3.0, 
        day01
    default-language: Haskell2010

test-suite tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   src, test
    Main-is:          Day01.test.hs
    default-language: Haskell2010
    Build-Depends:    
        base ^>=4.14.3.0,
        mr-env,
        split,
        tasty,
        tasty-hunit,
        day01,

