cabal-version:      2.4
name:               aoc
version:            0.1.0.0

author:             Emil Bergström
maintainer:         emil.bergstrom@cygni.se

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Aoc
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    
        base ^>=4.14.3.0, 
        mr-env,
        split,
        containers

executable main 
    main-is: Main.hs
    default-language: Haskell2010
    build-depends:    
        base ^>=4.14.3.0, 
        aoc

test-suite test 
    type:             exitcode-stdio-1.0
    hs-source-dirs:   src, test
    main-is:          Aoc.test.hs
    default-language: Haskell2010
    build-depends:    
        base ^>=4.14.3.0,
        mr-env,
        split,
        aoc,
        containers,
        tasty,
        tasty-hunit

