cabal-version:      2.4
name:               day01
version:            0.1.0.0

author:             Emil Bergström
maintainer:         emil.bergstrom@cygni.se

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Day01
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    
        base ^>=4.14.3.0, 
        mr-env,
        split

executable main 
    main-is: Main.hs
    default-language: Haskell2010
    build-depends:    
        base ^>=4.14.3.0, 
        day01

test-suite test 
    type:             exitcode-stdio-1.0
    hs-source-dirs:   src, test
    main-is:          Day01.test.hs
    default-language: Haskell2010
    build-depends:    
        base ^>=4.14.3.0,
        mr-env,
        split,
        tasty,
        tasty-hunit

